--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,8 +3,9 @@ node_modules/
 
 # Environment variables
 .env
-.env.*
-
+data.json
+data2.json
+.env.local
 # Uploads directory
 uploads/*
 !uploads/.gitkeep
@@ -17,7 +18,3 @@ npm-debug.log*
 # IDE
 .vscode/
 .idea/
-
-# OS
-.DS_Store
-Thumbs.db
