--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seeder.js"
+    "seed": "node seeder.js",
+     "build": "echo 'No build step needed for backend'"
   },
   "keywords": [],
   "author": "",
